<resources>
    <string name="app_name">Ultimate Utility Master</string>
    <string name="homepage_above_text">Dashboard</string>
    <string name="button_text_generate_random_number">Random Number Generator</string>
    <string name="button_text_delete_duplicate_lines_from_text">Delete Duplicate Lines From Text</string>
    <string name="setting_above_text">Configuration Settings</string>
    <string name="about_above_text">About Ultimate Utility Master</string>
    <string name="random_number_generator_above_text">Random Number Generator</string>
    <string name="app_version">Version: 1.0.0</string>
    <string name="button_text_repeater">Text Repeater</string>
    <string name="button_convert_text_to_upper_case">Convert text to upper case</string>
    <string name="button_convert_text_to_lower_case">Convert text to lower case</string>
    <string name="text_count_char_words_lines">Count characters, words and lines</string>
    <string name="text_what_is_my_ip_address">What is my IP Address</string>
    <string name="text_system_information">Systen Information</string>
    <string name="title_activity_setting">Settings</string>

    <string name="on">On</string>
    <string name="off">Off</string>

    <!-- About page -->
    <string name="about_us_text">Thank you for downloading Ultimate Utility Master app from Google Play Store. This app includes some handy utility tools for nerds or common individuals. I update this app regularly to add new features and to fix out reported bugs. \n\nYou may change some settings in the settings page in this app to further enhance your experience. Please note that we do not record or share any of your data posted to this application in any way. So feel assured that your data is never compromised. \n\nPlease enjoy the app and do share your feedback, suggestions and questions about the app. I will be happy to learn from your idaeas and improve the app over time. \n\n</string>
    <string name="about_privacy"></string>
    <string name="about_terms"></string>

    <string-array name="en_dc_type">
        <item>Encode</item>
        <item>Decode</item>
    </string-array>

    <string-array name="en_dc_features">
        <item>Web URL</item>
        <item>Base64</item>
    </string-array>

    <string name="action_settings">Settings</string>
    <string name="stdCal">Standard Calculator</string>
    <string name="sciCal">Scientific Calculator</string>
    <string name="unitCal">Unit Converter</string>
    <string name="FullCal">Select Calculator</string>
    <string name="title_activity_standard_cal">StandardCal</string>
    <string name="title_activity_scientific_cal">ScientificCal</string>
    <string name="title_activity_unit_coverter">UnitCoverter</string>
    <string name="clear">C</string>
    <string name="backspace">⌫</string>
    <string name="divide">÷</string>
    <string name="sqrt">√</string>
    <string name="cuberoot">\u221B</string>
    <string name="square">x²</string>
    <string name="cube">x\u00B3</string>
    <string name="tenpow">10\u207F</string>
    <string name="sininv">sin\u207B\u00B9</string>
    <string name="cosinv">cos\u207B\u00B9</string>
    <string name="taninv">tan\u207B\u00B9</string>
    <string name="posneg">±</string>
    <string name="arrow">↑</string>
    <string name="xpown">xⁿ</string>
    <string name="epown">eⁿ</string>
    <string name="pi">π</string>
    <string name="title_activity_unit_area">UnitArea</string>
    <string name="title_activity_unit_length">UnitLength</string>
    <string name="title_activity_unit_weight">UnitWeight</string>
    <string name="title_activity_unit_temperature">UnitTemperature</string>
    <string name="openBracket">(</string>
    <string name="closeBracket">)</string>
    <string name="history">History</string>

    <string-array name="area">
        <item>Sq. Millimeter</item>
        <item>Sq. Centimeter</item>
        <item>Sq Meter</item>
        <item>Sq. Kilometer</item>
        <item>Acre</item>
        <item>Hectare</item>
    </string-array>

    <string-array name="units">
        <item>Temperature</item>
        <item>Length</item>
        <item>Area</item>
        <item>Weight</item>


    </string-array>

    <string-array name="length">
        <item>Nanometer</item>
        <item>Millimeter</item>
        <item>Centimeter</item>
        <item>Meter</item>
        <item>Kilometer</item>
        <item>Inches</item>
        <item>Foot</item>
        <item>Yards</item>
        <item>Mile</item>
    </string-array>

    <string-array name="temperature">
        <item>Celsius</item>
        <item>Farenheit</item>
        <item>Kelvin</item>
    </string-array>

    <string-array name="weight">
        <item>Milligrams</item>
        <item>Centigrams</item>
        <item>Decigrams</item>
        <item>Grams</item>
        <item>Kilograms</item>
        <item>Metric tonnes</item>
        <item>Pounds</item>
        <item>Ounces</item>
    </string-array>

    <string name="title_activity_history">History</string>
    <string name="deleteHistory">Delete History</string>
    <string name="mode1">Deg</string>
    <string name="mode2">Radian</string>
    <string name="toggle">INV</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="naturalLog">ln</string>
    <string name="hyperbolicSine">sinh</string>
    <string name="hyperbolicCosine">cosh</string>
    <string name="hyperbolicTan">tanh</string>
    <string name="log">log</string>
    <string name="Mod">%</string>
    <string name="inverse">1/x</string>
    <string name="factorial">x!</string>>

    <string name="copy_instructions">Click here to copy. Long click to share.</string>
    <string name="digits">Digits</string>
    <string name="generate">Generate</string>
    <string name="lengtha">Length: %s</string>
    <string name="lower_letters">Lowercase letters</string>
    <string name="password_copied">Password successfully copied to clipboard</string>
    <string name="symbols">Symbols</string>
    <string name="upper_letters">Uppercase letters</string>
</resources>
