<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.Calculator.ScientificCalculator.ScientificCalculator">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/editText"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:editable="false"
            android:textAlignment="textEnd"
            android:gravity="end"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:textSize="15dp"
            android:textStyle="bold"
            android:id="@+id/editText2"
            android:layout_below="@+id/editText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:editable="false"
            android:textAlignment="textEnd"
            android:gravity="end"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/square"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/square"
                android:background="@drawable/boundry"
                android:textColor="#fff"
                android:onClick="onClick"
                android:textAllCaps="false"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/xpowy"
                android:background="@drawable/boundry"
                android:textColor="#fff"
                android:layout_alignBottom="@+id/square"
                android:layout_toRightOf="@+id/square"
                android:layout_toEndOf="@+id/square"
                android:text="@string/xpown"
                android:onClick="onClick"
                android:textAllCaps="false"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="log"
                android:background="@drawable/boundry"
                android:textColor="#fff"
                android:id="@+id/log"
                android:layout_alignBottom="@+id/xpowy"
                android:layout_toRightOf="@+id/xpowy"
                android:layout_toEndOf="@+id/xpowy"
                android:onClick="onClick"
                android:textAllCaps="false"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sin"
                android:id="@+id/sin"
                android:background="@drawable/boundry"
                android:textColor="#fff"
                android:layout_below="@+id/square"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:onClick="onClick"
                android:textAllCaps="false"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cos"
                android:id="@+id/cos"
                android:background="@drawable/boundry"
                android:textColor="#fff"
                android:layout_alignBottom="@+id/sin"
                android:layout_alignLeft="@+id/xpowy"
                android:layout_alignStart="@+id/xpowy"
                android:onClick="onClick"
                android:textAllCaps="false"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tan"
                android:id="@+id/tan"
                android:background="@drawable/boundry"
                android:textColor="#fff"
                android:layout_alignBottom="@+id/cos"
                android:layout_toRightOf="@+id/cos"
                android:layout_toEndOf="@+id/cos"
                android:onClick="onClick"
                android:textAllCaps="false"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggle"
                android:background="@drawable/boundry"
                android:textColor="#fff"
                android:textStyle="bold"
                android:text="@string/toggle"
                android:layout_below="@+id/sin"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:checked="false"
                android:layout_toLeftOf="@+id/cos"
                android:layout_toStartOf="@+id/cos"
                android:onClick="onClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/factorial"
                android:id="@+id/factorial"
                android:background="@drawable/boundry"
                android:textColor="#fff"
                android:layout_alignBottom="@+id/toggle"
                android:layout_toRightOf="@+id/toggle"
                android:layout_toEndOf="@+id/toggle"
                android:onClick="onClick"
                android:textAllCaps="false"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sqrt"
                android:background="@drawable/boundry"
                android:textColor="#fff"
                android:layout_alignBottom="@+id/factorial"
                android:layout_toRightOf="@+id/factorial"
                android:layout_toEndOf="@+id/factorial"
                android:text="@string/sqrt"
                android:onClick="onClick"
                android:textAllCaps="false"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                android:id="@+id/clear"
                android:background="@drawable/boundry"
                android:textColor="#fff"
                android:layout_above="@+id/tan"
                android:layout_toRightOf="@+id/log"
                android:layout_toEndOf="@+id/log"
                android:onClick="onClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backspace"
                android:id="@+id/backSpace"
                android:background="@drawable/boundry"
                android:textColor="#fff"
                android:layout_above="@+id/sqrt"
                android:layout_toRightOf="@+id/tan"
                android:layout_toEndOf="@+id/tan"
                android:onClick="onClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pi"
                android:id="@+id/pi"
                android:background="@drawable/boundry"
                android:textColor="#fff"
                android:layout_alignBottom="@+id/sqrt"
                android:layout_alignLeft="@+id/backSpace"
                android:layout_alignStart="@+id/backSpace"
                android:onClick="onClick"
                android:textAllCaps="false"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7"
                android:background="@drawable/boundry"
                android:textColor="#fff"
                android:id="@+id/num7"
                android:layout_below="@+id/toggle"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:onClick="onClick"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8"
                android:background="@drawable/boundry"
                android:textColor="#fff"
                android:id="@+id/num8"
                android:layout_alignBottom="@+id/num7"
                android:layout_toRightOf="@+id/num7"
                android:layout_toEndOf="@+id/num7"
                android:onClick="onClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="9"
                android:background="@drawable/boundry"
                android:textColor="#fff"
                android:id="@+id/num9"
                android:layout_alignBottom="@+id/num8"
                android:layout_toRightOf="@+id/num8"
                android:layout_toEndOf="@+id/num8"
                android:onClick="onClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4"
                android:background="@drawable/boundry"
                android:textColor="#fff"
                android:id="@+id/num4"
                android:layout_below="@+id/num7"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:onClick="onClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5"
                android:id="@+id/num5"
                android:background="@drawable/boundry"
                android:textColor="#fff"
                android:layout_alignBottom="@+id/num4"
                android:layout_alignLeft="@+id/num8"
                android:layout_alignStart="@+id/num8"
                android:onClick="onClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="6"
                android:background="@drawable/boundry"
                android:textColor="#fff"
                android:id="@+id/num6"
                android:layout_alignBottom="@+id/num5"
                android:layout_toRightOf="@+id/num5"
                android:layout_toEndOf="@+id/num5"
                android:onClick="onClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:background="@drawable/boundry"
                android:textColor="#fff"
                android:id="@+id/num1"
                android:layout_below="@+id/num4"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:onClick="onClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2"
                android:background="@drawable/boundry"
                android:textColor="#fff"
                android:id="@+id/num2"
                android:layout_alignBottom="@+id/num1"
                android:layout_alignLeft="@+id/num5"
                android:layout_alignStart="@+id/num5"
                android:onClick="onClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3"
                android:background="@drawable/boundry"
                android:textColor="#fff"
                android:id="@+id/num3"
                android:layout_alignBottom="@+id/num2"
                android:layout_toRightOf="@+id/num2"
                android:layout_toEndOf="@+id/num2"
                android:onClick="onClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/posneg"
                android:id="@+id/posneg"
                android:background="@drawable/boundry"
                android:textColor="#fff"
                android:layout_below="@+id/num1"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="20dp"
                android:onClick="onClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:background="@drawable/boundry"
                android:textColor="#fff"
                android:id="@+id/num0"
                android:layout_alignBottom="@+id/posneg"
                android:layout_toRightOf="@+id/posneg"
                android:layout_toEndOf="@+id/posneg"
                android:onClick="onClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="."
                android:id="@+id/dot"
                android:layout_alignBottom="@+id/num0"
                android:layout_toRightOf="@+id/num0"
                android:layout_toEndOf="@+id/num0"
                android:textSize="20dp"
                android:background="@drawable/boundry"
                android:textColor="#fff"
                android:nestedScrollingEnabled="false"
                android:onClick="onClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/divide"
                android:id="@+id/divide"
                android:background="@drawable/boundry"
                android:textColor="#fff"
                android:layout_above="@+id/num6"
                android:layout_toRightOf="@+id/num9"
                android:layout_toEndOf="@+id/num9"
                android:onClick="onClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="x"
                android:background="@drawable/boundry"
                android:textColor="#fff"
                android:id="@+id/multiply"
                android:layout_above="@+id/num3"
                android:layout_alignLeft="@+id/divide"
                android:layout_alignStart="@+id/divide"
                android:onClick="onClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:background="@drawable/boundry"
                android:textColor="#fff"
                android:id="@+id/minus"
                android:layout_above="@+id/dot"
                android:layout_alignLeft="@+id/multiply"
                android:layout_alignStart="@+id/multiply"
                android:textSize="20dp"
                android:onClick="onClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:background="@drawable/boundry"
                android:textColor="#fff"
                android:id="@+id/plus"
                android:layout_alignBottom="@+id/dot"
                android:layout_alignLeft="@+id/minus"
                android:layout_alignStart="@+id/minus"
                android:onClick="onClick" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/openBracket"
                android:id="@+id/openBracket"
                android:background="@drawable/boundry"
                android:textColor="#fff"
                android:layout_alignTop="@+id/equal"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:onClick="onClick"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/closeBracket"
                android:id="@+id/closeBracket"
                android:background="@drawable/boundry"
                android:textColor="#fff"
                android:layout_alignBottom="@+id/equal"
                android:layout_toRightOf="@+id/openBracket"
                android:layout_toEndOf="@+id/openBracket"
                android:onClick="onClick"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mode1"
                android:id="@+id/mode"
                android:background="@drawable/boundry"
                android:textColor="#fff"
                android:layout_alignBottom="@+id/equal"
                android:layout_toRightOf="@+id/equal"
                android:layout_toEndOf="@+id/equal"
                android:onClick="onClick"
                android:textAllCaps="false"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="="

                android:id="@+id/equal"
                android:textStyle="bold"
                android:background="@drawable/boundry"
                android:textColor="#fff"
                android:onClick="onClick"
                android:layout_below="@+id/num0"
                android:layout_toRightOf="@+id/num0"
                android:layout_toEndOf="@+id/num0" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:id="@+id/history"
                android:layout_marginTop="25dp"
                android:textColor="#fff"
                android:background="@drawable/boundry"
                android:layout_below="@+id/openBracket"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:onClick="onClick"/>

        </RelativeLayout>


    </LinearLayout>
</RelativeLayout>
